--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,6 @@ baseURL = 'https://example.org/'
 languageCode = 'en-us'
 title = 'Nabil BEN SALAH'
 theme = 'ananke'
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
