--- a/hugo.toml
+++ b/hugo.toml
@@ -5,3 +5,17 @@ theme = 'PaperMod'
 [caches]
   [caches.images]
     dir = ':cacheDir/images'
+[params]
+  defaultTheme = 'dark'
+
+  [params.homeInfoParams]
+    Title = "Hi there 👋"
+    Content = "Welcome to my website."
+
+  [[params.socialIcons]]
+  name = "email"
+  url = "mailto:nabil.bsalah0@gmail.com"
+  
+  [params.contact]
+    email = 'nabil.bsalah0@gmail.com'
+    phone = '+216 26210043'
