--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,3 @@
-# Site Configuration
 baseURL: 'https://nabil-bensalah.org/'
 languageCode: en-us
 defaultContentLanguage: en
@@ -15,7 +14,6 @@ enableEmoji: true
 pygmentsUseClasses: true
 mainsections: ["posts", "projects", "contact", "cv"]
 
-# Performance Optimization
 minify:
   disableXML: true
   minifyOutput: true
@@ -23,12 +21,10 @@ minify:
     html:
       keepWhitespace: false
 
-# Pagination
 pagination:
   disableAliases: false
   pagerSize: 5
 
-# Multilingual Support
 languages:
   en:
     languageName: "English"
@@ -124,7 +120,7 @@ languages:
         enabled: true
         title: "Nabil BEN SALAH"
         subtitle: "Ingénieur DevOps | Spécialiste Cloud | Expert Kubernetes"
-        imageUrl: "images/profile.jpg"
+        imageUrl: "static/profile.jpeg"
 
 # Site Parameters
 params:
@@ -134,23 +130,22 @@ params:
   assets:
     favicon: "favicon.ico"
     apple_touch_icon: "apple-touch-icon.png"
-  
+
   # Content Display
   showReadingTime: true
   dateFormat: 'January 2, 2006'
   timeFormat: '15:04'
-  
+
   # Metadata
   description: "Professional portfolio and technical blog of Nabil BEN SALAH - DevOps Engineer and Cloud Specialist"
   author: "Nabil BEN SALAH"
-  copyright: "© 2023 Nabil BEN SALAH. All rights reserved."
-  
+  copyright: "© 2025 Nabil BEN SALAH. All rights reserved."
+
   # SEO
   opengraph: true
   twitter_cards: true
   shareTwitter: true
-  googleAnalytics: "UA-XXXXX-X"  # Replace with your GA ID
-  
+
   # Features
   ShowShareButtons: true
   ShowReadingTime: true
@@ -163,34 +158,27 @@ params:
   ShowPageNums: true
   ShowToc: true
   TocOpen: false
-  
+
   # Images
   images: 
-    - "images/cover.jpg"
-    - "images/avatar.jpg"
-  
+    - "static/cover.jpg"
+    - "static/avatar.jpg"
+
   # Social Links
   socialIcons:
     - name: email
       url: "mailto:nabil.bsalah0@gmail.com"
     - name: github
       url: "https://github.com/bensalah-nabil"
-    - name: gitlab
-      url: "https://gitlab.com/bensalah-nabil"
     - name: linkedin
       url: "https://www.linkedin.com/in/nabil-ben-salah/"
     - name: twitter
-      url: "https://twitter.com/nabil_bensalah"
-    - name: medium
-      url: "https://medium.com/@nabil.bensalah"
-  
-  # Contact Information
+      url: "https://x.com/NabilBe27242883"
+
   contact:
     email: nabil.bsalah0@gmail.com
     phone: "+216 26 210 043"
-    location: "Tunis, Tunisia"
-    calendly: "https://calendly.com/nabil-bensalah"
-  
+
   # Professional Information
   skills:
     - "Cloud Computing (AWS, Azure, GCP)"
@@ -198,12 +186,11 @@ params:
     - "Terraform & Ansible"
     - "CI/CD Pipelines"
     - "Linux Administration"
-  
+
   # Analytics
   plausibleAnalytics: true
   plausibleDomain: "nabil-bensalah.org"
-  
-  # Comments
+
   utterances:
     enable: true
     repo: "bensalah-nabil/blog-comments"
