--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,163 +1,79 @@
 baseURL: 'https://nabil-bensalah.org/'
 languageCode: en-us
-defaultContentLanguage: en
 title: Nabil BEN SALAH - DevOps Engineer
 theme: PaperMod
 
 # Content Organization
 contentDir: content
 staticDir: static
-dataDir: data
-i18nDir: i18n
-layoutsDir: layouts
-archetypeDir: archetypes
-assetDir: assets
 
 # Build Settings
-build:
-  writeStats: true
-  useResourceCacheWhen: fallback
-  noJSConfigInAssets: false
-  cacheResources: true
-  resourceDir: "resources"
-
-enableInlineShortcodes: true
-enableRobotsTXT: true
 buildDrafts: false
-buildFuture: false
-buildExpired: false
 enableEmoji: true
-pygmentsUseClasses: true
-mainsections: ["posts", "projects", "contact", "cv"]
-
 minify:
-  disableXML: true
   minifyOutput: true
-  tdewolff:
-    html:
-      keepWhitespace: false
 
-pagination:
-  disableAliases: false
-  pagerSize: 5
+# Menu
+menu:
+  main:
+    - name: Posts
+      url: posts/
+      weight: 10
+    - name: Projects
+      url: projects/
+      weight: 20
+    - name: Contact
+      url: contact/
+      weight: 30
+    - name: CV
+      url: cv/
+      weight: 40
+    - name: Archive
+      url: archives/
+      weight: 50
+    - name: Tags
+      url: tags/
+      weight: 60
 
-# Languages Configuration
-languages:
-  en:
-    languageName: "English"
-    weight: 1
-    contentDir: content/en
-    title: "Nabil BEN SALAH - DevOps Engineer"
-    
-    menu:
-      main:
-        - name: Posts
-          url: posts/
-          weight: 10
-        - name: Projects
-          url: projects/
-          weight: 20
-        - name: Contact
-          url: contact/
-          weight: 30
-        - name: CV
-          url: cv/
-          weight: 40
-        - name: Archive
-          url: archives/
-          weight: 50
-        - name: Tags
-          url: tags/
-          weight: 60
-
-    params:
-      profileMode:
-        enabled: true
-        title: "Nabil BEN SALAH"
-        subtitle: "DevOps Engineer | Cloud Specialist | Kubernetes Expert"
-        imageUrl: "images/profile.jpeg"
-        imageWidth: 150
-        imageHeight: 150
-        buttons:
-          - name: Posts
-            url: posts/
-          - name: Projects
-            url: projects/
-          - name: Contact
-            url: contact/
-          - name: Download CV
-            url: cv.pdf
-
-      homeInfoParams:
-        Title: "Hello, I'm Nabil BEN SALAH"
-        Content: >
-          DevOps Engineer with 5+ years of experience in cloud infrastructure,
-          CI/CD pipelines, and container orchestration.
-          Passionate about automation, infrastructure as code, and cloud-native technologies.
-
-  fr:
-    languageName: "Français"
-    weight: 2
-    contentDir: content/fr
-    title: "Nabil BEN SALAH - Ingénieur DevOps"
-    
-    menu:
-      main:
-        - name: Articles
-          url: articles/
-          weight: 10
-        - name: Projets
-          url: projets/
-          weight: 20
-        - name: Contact
-          url: contact/
-          weight: 30
-        - name: CV
-          url: cv/
-          weight: 40
-        - name: Archives
-          url: archives/
-          weight: 50
-        - name: Mots-clés
-          url: tags/
-          weight: 60
-
-    params:
-      profileMode:
-        enabled: true
-        title: "Nabil BEN SALAH"
-        subtitle: "Ingénieur DevOps | Spécialiste Cloud | Expert Kubernetes"
-        imageUrl: "images/profile.jpeg"
-
-# Global Site Parameters
+# Site Parameters
 params:
-  env: production # Helps with conditional builds
-  
+  profileMode:
+    enabled: true
+    title: "Nabil BEN SALAH"
+    subtitle: "DevOps Engineer | Cloud Specialist | Kubernetes Expert"
+    imageUrl: "images/profile.jpeg"
+    imageWidth: 150
+    imageHeight: 150
+    buttons:
+      - name: Posts
+        url: posts/
+      - name: Projects
+        url: projects/
+      - name: Contact
+        url: contact/
+      - name: Download CV
+        url: cv.pdf
+
+  homeInfoParams:
+    Title: "Hello, I'm Nabil BEN SALAH"
+    Content: >
+      DevOps Engineer with 5+ years of experience in cloud infrastructure,
+      CI/CD pipelines, and container orchestration.
+      Passionate about automation, infrastructure as code, and cloud-native technologies.
+
   # Appearance
   defaultTheme: dark
   enableThemeToggle: true
-  
-  # Assets
-  assets:
-    favicon: "favicon.ico"
-    apple_touch_icon: "apple-touch-icon.png"
-  
+
   # Content Display
   showReadingTime: true
   dateFormat: 'January 2, 2006'
-  
+
   # Metadata
   description: "Professional portfolio and technical blog of Nabil BEN SALAH"
   author: "Nabil BEN SALAH"
   copyright: "© 2025 Nabil BEN SALAH"
-  
-  # Features
-  ShowShareButtons: true
-  ShowPostNavLinks: true
-  ShowBreadCrumbs: true
-  ShowCodeCopyButtons: true
-  ShowToc: true
-  
+
   # Social Links
   socialIcons:
     - name: email
@@ -174,21 +90,3 @@ outputs:
   home:
     - HTML
     - RSS
-    - JSON
-
-# Markup Processing
-markup:
-  goldmark:
-    renderer:
-      unsafe: true
-  highlight:
-    style: "github-dark"
-    lineNos: true
-  tableOfContents:
-    startLevel: 2
-    endLevel: 4
-
-# Services
-services:
-  disqus:
-    shortname: "nabil-bensalah-blog"
