--- a/hugo.yaml
+++ b/hugo.yaml
@@ -27,7 +27,7 @@ menu:
       url: contact/
       weight: 30
     - name: Resume
-      url: resume/
+      url: "resume/resume.pdf"
       weight: 40
     - name: Archive
       url: archives/
