--- a/hugo.yaml
+++ b/hugo.yaml
@@ -27,7 +27,7 @@ menu:
       url: contact/
       weight: 30
     - name: Resume
-      url: "resume/resume.pdf"
+      url: resume/
       weight: 40
     - name: Archive
       url: archives/
@@ -60,7 +60,7 @@ params:
   homeInfoParams:
     Title: "Hello, I'm Nabil BEN SALAH"
     Content: >
-      DevOps Engineer with 5+ years of experience in cloud infrastructure,
+      DevOps Engineer with 2+ years of experience in cloud infrastructure,
       CI/CD pipelines, and container orchestration.
       Passionate about automation, infrastructure as code, and cloud-native technologies.
 
@@ -95,7 +95,12 @@ params:
       url: "https://www.linkedin.com/in/nabil-ben-salah/"
     - name: twitter
       url: "https://x.com/NabilBe27242883"
-
+    - name: hackthebox
+      url: "https://app.hackthebox.com/profile/1877190"
+    - name: buymeacoffee
+      url: "https://ba9chich.com//en/nabil.bsalah0"
+    - name: cv
+      url: "https://blog.r2b001.site/resume/resume.pdf"
 taxonomies:
   category: categories
   tag: tags
