--- a/hugo.yaml
+++ b/hugo.yaml
@@ -56,6 +56,7 @@ params:
   showtoc: true
   tocopen: false
   SeriesOpen: false
+  authorImage: "images/profile.jpg"
 
   homeInfoParams:
     Title: "Hello, I'm Nabil BEN SALAH"
